# mine4burst

./: CMakeLists.txt  config.json
include/: config.h  helper.h  plot.h
src/: config.c  helper.c  main.c  plot.c
